fix: correcciones que me hizo jehimmy

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         }
         .hero-left{
             padding:1rem 0;
+            margin-top: -4em;
         }
         .slogan{
             color:var(--red);
@@ -506,7 +507,7 @@
                 <div class="mark" aria-hidden="true">DC</div>
                 <div>
                     <div style="font-weight:800;">Doctor Chery</div>
-                    <div style="font-size:.78rem;color:var(--muted);margin-top:2px;">Especialistas en la salud de tu vehículo</div>
+                    <div style="font-size:.78rem;color:var(--muted);margin-top:2px;">Especialista en la salud de tu vehículo</div>
                 </div>
             </a>
 
@@ -539,7 +540,7 @@
                 <div class="hero-left">
                     <span class="slogan">Servicio Profesional • Rapidez</span>
                     <h1 id="inicio-title">Doctor Chery — Tu Mecánico de Confianza</h1>
-                    <p class="lead">Más de 10 años atendiendo vehículos, especializados en diagnóstico electrónico y mantenimiento integral. Cuidamos cada detalle para que tu auto vuelva al camino como nuevo.</p>
+                    <p class="lead">Más de 5 años atendiendo vehículos, especializados en diagnóstico electrónico y mantenimiento integral. Cuidamos cada detalle para que tu auto vuelva al camino como nuevo.</p>
                     <div style="margin-top:1.2rem; display:flex; gap:.8rem; align-items:center;">
                         <a class="cta" href="#contacto">Agenda una cita</a>
                         <a style="color:var(--muted); text-decoration:none; padding:.5rem .8rem; border-radius:8px; background:rgba(255,255,255,0.02)" href="#servicios">Ver servicios</a>
@@ -562,11 +563,11 @@
                     <hr style="border:none;height:1px;background:rgba(255,255,255,0.03);margin:1rem 0;border-radius:2px;">
 
                     <div style="display:flex;gap:1rem;flex-wrap:wrap;">
-                        <div style="min-width:120px; padding:.6rem .75rem; border-radius:8px; background:rgba(255,255,255,0.02); text-align:center;">
+                        <div style="min-width:120px; width: 100%; padding:.6rem .75rem; border-radius:8px; background:rgba(255,255,255,0.02); text-align:center;">
                             <div style="font-weight:700;color:var(--white);">Repuestos Originales</div>
                             <div style="color:var(--muted);font-size:.86rem;">Calidad garantizada</div>
                         </div>
-                        <div style="min-width:120px; padding:.6rem .75rem; border-radius:8px; background:rgba(255,255,255,0.02); text-align:center;">
+                        <div style="min-width:120px; width: 100%; padding:.6rem .75rem; border-radius:8px; background:rgba(255,255,255,0.02); text-align:center;">
                             <div style="font-weight:700;color:var(--white);">Diagnóstico Rápido</div>
                             <div style="color:var(--muted);font-size:.86rem;">Lecturas en tiempo real</div>
                         </div>
@@ -579,12 +580,11 @@
         <section id="quienes" aria-labelledby="quienes-title">
             <div class="section-title" style="padding-bottom:0;">
                 <h2 id="quienes-title">Tu Mecánico de Confianza</h2>
-                <div style="color:var(--muted);font-size:.95rem;">Profesionalismo, transparencia y garantía en cada intervención</div>
             </div>
 
             <div class="container" style="padding-top:.6rem;">
                 <div class="hero-card" style="width:100%;">
-                    <p style="margin:0;color:var(--muted);">
+                    <p style="margin:0;color:var(--muted); text-align: justify;">
                         Doctor Chery combina experiencia mecánica tradicional con herramientas de diagnóstico modernas. Especializados en marcas asiáticas como Chery, ofrecemos mantenimiento preventivo, reparaciones de motor y transmisiones, y servicio de aire acondicionado automotriz con enfoque en durabilidad y seguridad.
                     </p>
                 </div>
@@ -595,7 +595,6 @@
         <section id="servicios" aria-labelledby="servicios-title">
             <div class="section-title">
                 <h2 id="servicios-title">Nuestros Servicios</h2>
-                <div style="color:var(--muted);font-size:.95rem;">Atención integral para tu vehículo</div>
             </div>
 
             <div class="services-grid" role="list">
@@ -631,7 +630,7 @@
                     </div>
                     <div class="svc-body">
                         <h3>Reparaciones de Motor y Transmisión</h3>
-                        <p>Intervenciones con equipo especializado y pruebas de rendimiento.</p>
+                        <p>Intervenciones con equipos especializados y pruebas de rendimiento.</p>
                     </div>
                 </div>
 
@@ -653,7 +652,6 @@
         <section id="galeria" aria-labelledby="galeria-title">
             <div class="section-title">
                 <h2 id="galeria-title">Mira Nuestro Trabajo en Acción</h2>
-                <div style="color:var(--muted);font-size:.95rem;">Videos cortos — diagnósticos y reparaciones</div>
             </div>
 
             <div class="gallery-grid" aria-live="polite">
@@ -674,8 +672,7 @@
                     </div>
                     <div class="video-caption">
                         <div>
-                            <div style="font-weight:700;">Comsumo de aceite</div>
-
+                            <div style="font-weight:700;">Consumo de aceite</div>
                         </div>
                         <div class="meta">▶</div>
                     </div>
@@ -723,7 +720,6 @@
         <section id="contacto" aria-labelledby="contacto-title">
             <div class="section-title">
                 <h2 id="contacto-title">Agenda una Cita</h2>
-                <div style="color:var(--muted);font-size:.95rem;">Contáctanos y te atendemos rápido</div>
             </div>
 
             <div class="contact-grid">
@@ -736,11 +732,11 @@
                         </div>
                         <div>
                             <div style="font-weight:700;">Teléfono / WhatsApp</div>
-                            <div style="color:var(--muted);">+57 300 123 4567</div>
+                            <div style="color:var(--muted);">+58 424 524 0227</div>
                             <div style="margin-top:.5rem;">
-                                <a href="tel:+573001234567" style="color:var(--red);text-decoration:none;font-weight:700;">Llamar</a>
+                                <a href="tel:+584245240227" style="color:var(--red);text-decoration:none;font-weight:700;">Llamar</a>
                                 &nbsp;•&nbsp;
-                                <a href="https://wa.me/573001234567" target="_blank" rel="noopener" style="color:var(--red);text-decoration:none;font-weight:700;">WhatsApp</a>
+                                <a href="https://wa.me/584245240227" target="_blank" rel="noopener" style="color:var(--red);text-decoration:none;font-weight:700;">WhatsApp</a>
                             </div>
                         </div>
                     </div>
@@ -776,7 +772,7 @@
 
                 <div class="contact-card" aria-hidden="false">
                     <div style="font-weight:700;margin-bottom:.6rem;">Horario de Atención</div>
-                    <div style="color:var(--muted);margin-bottom:.8rem;">Lunes a Viernes — 8:00 a 18:00<br>Sábado — 8:00 a 13:00</div>
+                    <div style="color:var(--muted);margin-bottom:.8rem;">Lunes a Viernes: 8:00 AM - 6:00 PM<br>Sábado: 8:00 AM - 1:00 PM</div>
                 </div>
             </div>
         </section>
